kubernetes/service.yml
---
apiVersion: v1
kind:       Service
metadata:
  name: 'feedback-api'
spec:
  selector:
    app: 'feedback-api'
  ports:
    - protocol:   TCP
      port:       80
      targetPort: 80
